<resources>
    <string name="app_name">SimpleModelTracker</string>
    <!-- GPS -->
    <string name="gps_network_not_enabled">Do you want to enable your GPS?</string>
    <string name="open_location_settings">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_status">GPS Status</string>
    <string name="satellites">Satellites</string>
    <string name="hdop">hdop</string>
    <string name="gps_altitude">GPS altitude</string>
    <string name="gps_speed">GPS Speed</string>
    <string name="location_age">Location age</string>
    <string name="time_sat_acquisition">Time sat acquisition</string>
    <string name="tel_latitude">Tel Latitude</string>
    <string name="tel_longitude">Tel Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <!-- config -->
    <string name="color_black">BLACK</string>
    <string name="color_white">WHITE</string>
    <string name="color_magenta">MAGENTA</string>
    <string name="color_blue">BLUE</string>
    <string name="color_yellow">YELLOW</string>
    <string name="color_green">GREEN</string>
    <string name="color_gray">GRAY</string>
    <string name="color_cyan">CYAN</string>
    <string name="color_dkgray">DKGRAY</string>
    <string name="color_ltgray">LTGRAY</string>
    <string name="color_red">RED</string>
    <!-- Application preference screen-->
    <string name="titre_application_pref">Application preferences</string>
    <string name="map_line_color">Map Line Color</string>
    <string name="altigps_config">AltiGPS config</string>
    <string name="application_langage_config">Application langage</string>
    <string name="application_units_config">Application Units</string>
    <string name="baud_rate">Baud Rate</string>
    <string name="connection_type">Connection Type</string>
    <string name="telemetry_voice">Telemetry voice</string>
    <string name="test_telemetry_voice">Test Voice</string>
    <string name="phone_english">English</string>
    <string name="phone_french">French</string>
    <string name="phone_language">Phone language</string>
    <string name="config_unit_meters">Meters</string>
    <string name="config_unit_feet">Feet</string>

    <!-- About screen -->
    <string name="about_screen">About</string>
    <string name="simple_tracker_version">Simple Tracker version</string>
    <string name="dismiss_about">Dismiss</string>
    <string name="version"> pre 2.0.0 candidate 4</string>

    <!--connection screen -->
    <string name="select_device_to_use">Select Device to use</string>

    <!-- bluetooth messages -->
    <string name="BT_msg1">Bluetooth Device Not Available</string>
    <string name="BT_msg2">No Paired Bluetooth Devices Found.</string>
    <string name="select_bluetooth_device">Select Bluetooth device</string>

    <!-- Menu -->
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="action_settings">Application Settings</string>
    <string name="bluetooth_device">bluetooth Device</string>
    <string name="disconnected">disconnected</string>
    <string name="connected">Connected</string>

    <!--telemetry module config -->
    <string name="m3DR_load_cfg">Loading 3DR module configuration</string>
    <string name="m3DR_retrieving_cfg">Retrieving config</string>
    <string name="m3DR_no_errors">No error saving the data\n Running AT&amp;W</string>
    <string name="m3DR_we_have_errors">We have an error\n not saving\n Please try again</string>
    <string name="m3DR_saving_cancelled">Saving has been cancelled</string>
    <string name="m3DR_run_command">Running command </string>
    <string name="m3DR_cancel_retrieve">Cancelling retrieve</string>
    <string name="m3DR_run_at0">Running command AT0 to exit AT mode</string>
    <string name="m3DR_run_save">Running Saving commands</string>
    <string name="m3DR_save_cfg">Saving config</string>
    <string name="m3DR_Cancel">Cancel</string>
    <string name="m3DR_attempt_con">Attempting connecting to the 3DR module</string>
    <string name="m3DR_attempt_con2">Attempt connecting at:</string>
    <string name="m3DR_connect_ok">Connection successfull at:</string>
    <string name="m3DR_failed_con">Failed to connect.\n Please unplug USB and plug it back\n Restart the application\n Then try again</string>
    <string name="m3DR_connecting">Connecting</string>
    <string name="configure_telemetry_module">Configure telemetry module</string>
    <string name="m3DR_version">Version:</string>
    <string name="rssi">RSSI:</string>
    <string name="format">Format:</string>
    <string name="baud">Baud</string>
    <string name="air_speed">Air speed</string>
    <string name="net_id">Net ID</string>
    <string name="tx_power">TX Power</string>
    <string name="ecc">ECC</string>
    <string name="op_resend">Op Resend</string>
    <string name="rts_cts">RTS CTS</string>
    <string name="mavlink">Mavlink</string>
    <string name="lbt_rssi">LBT RSSI</string>
    <string name="min_freq">Min Freq</string>
    <string name="max_freq">Max Freq</string>
    <string name="nbr_of_channels"># of channels</string>
    <string name="duty_cycle">Duty Cycle</string>
    <string name="max_win_ms">Max Win (ms)</string>
    <string name="retrieve_config">Retrieve config</string>
    <string name="m3DR_save_config">Save Config</string>
    <string name="bt_info_msg">This will allows you to configure a bluetooth module. You will need a ttl cable and an adaptator to connect your bluetooth module to your phone. Please look at the on line help</string>
    <string name="bt_info_title">Bluetooth module configuration</string>
    <string name="bt_info_ok">OK</string>
    <string name="loading_bt_config_msg">Loading bluetooth module config</string>
    <string name="dr_info_msg">This will allows you to configure a 3DR telemetry module. You will need a ttl cable and an adaptator to connect your 3DR module to your phone. Please look at the on line help</string>
    <string name="dr_info_title">3DR module configuration</string>
    <string name="configure_bluetooth_module">Configure Bluetooth module</string>
    <string name="module">Module:</string>
    <string name="bt_baud_rate">Baud rate:</string>
    <string name="pin">Pin:</string>
    <string name="module_name">Module name:</string>

    <!-- Lora module-->
    <string name="lora_configure_module_title">Configure Lora module</string>
    <string name="lora_module_channel">Channel:</string>
    <string name="lora_module_trans_mode">Trans mode:</string>
    <string name="lora_module_address">Address:</string>
    <string name="lora_module_channel_rssi">Channel RSSI</string>
    <string name="lora_module_key">Key:</string>
    <string name="lora_module_parity">Parity</string>
    <string name="lora_module_wor_cycle">Wor Cycle</string>
    <string name="lora_module_lbt">LBT:</string>
    <string name="lora_module_air_rate">Air Rate:</string>
    <string name="lora_module_power">Power:</string>
    <string name="lora_module_packet_rssi">Packet RSSI:</string>
    <string name="lora_module_packet_size">Packet Size:</string>
    <string name="lora_module_config_msg">This will allow you to configure Lora telemetry modules</string>
    <string name="lora_module_config_msg_title">Lora telemetry module configuration</string>
    <string name="lora_module_config_button_ok">OK</string>
    <string name="lora_module_loading_config_msg">Loading Lora module config</string>
    <string name="lora_module_channel_msg">Module channel cannot be empty</string>
    <string name="lora_module_invalid_channel">Channel is invalid</string>
    <string name="lora_module_channel_value_msg">Channel must be between 0 and 83</string>
    <string name="lora_module_address_empty_msg">Module address cannot be empty</string>
    <string name="lora_module_address_range">Address must be between 0 and 65535</string>
    <string name="lora_module_address_invalid">Address is invalid</string>
    <string name="lora_module_updating_address_msg">Updating module address</string>
    <string name="lora_module_updating_msg2">Updating serial speed, parity and air rate</string>
    <string name="lora_module_updating_msg3">updating packet , RSSI noise and transmitting power</string>
    <string name="lora_module_updating_msg4">updating channel</string>
    <string name="lora_module_updating_msg5">updating RSSI Byte, trans Mode, LBT and WOR Cycle</string>
    <string name="lora_module_updating_msg6">updating key</string>
    <string name="lora_module_connecting_msg">Attempting connecting to the Lora module</string>

    <string name="module_name_cannot_be_empty_msg">Module name cannot be empty\n</string>
    <string name="module_pin_cannot_be_empty_msg">Module Pin cannot be empty\n</string>
    <string name="attempting_connect_msg">Attempting connecting to the Bluetooth module</string>
    <string name="attempting_connect_bt_msg">Attempting connecting to the Bluetooth module</string>

    <string name="_3dr_settings">3DR settings...</string>
    <string name="bt_settings">BT settings...</string>

    <string name="main_screen_actity">Cancel</string>
    <string name="MS_msg1">Connecting...</string>
    <string name="MS_msg2">Please wait!!!</string>
    <string name="notconnected_msg">You are not connected please connect the receiver module</string>
    <string name="sat_acq_complete_msg">Satelite acquisition complete</string>
    <string name="sat_acq_lost_msg">Satelite acquisition lost</string>
    <string name="credit_goes_to_philippe_huguenin_bergenat_n_for_all_the_testing">Credit goes to Philippe Huguenin-Bergenat \n for all the testing</string>
    <string name="distance">Distance</string>

    <string name="share_with">Share with</string>
    <string name="share_file">Share file</string>
    <string name="simpletracker_has_shared">SimpleTracker has shared with you some info</string>
    <string name="no_app_available">No app available</string>
    <string name="model_rocket">Rocket</string>
    <string name="model_boat">Boat</string>
    <string name="model_car">Car</string>
    <string name="model_ballon">Hot air ballon</string>
    <string name="model_plane">Plane</string>
    <string name="model_type">Model type:</string>

</resources>